--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,10 @@ padding: 2%;
 width: fit-content;
 margin-left: auto;
 margin-right: auto;
-max-height: 80vh;
-box-shadow: 0px 18px 28px white;
-border-radius: 50px;
+/* max-height: 80vh; */
+height: 80vh;
+box-shadow: 0px 8px 28px white;
+border-radius: 20px;
 
 }
 
@@ -39,6 +40,7 @@ border-radius: 50px;
 .todo-input-item label{
   font-weight: bold;
   margin-bottom: 10px;
+  box-shadow: 0px 18px 28px rgb(15, 15, 15);
 }
 
 .todo-input-item input{
@@ -47,6 +49,7 @@ border-radius: 50px;
   height: 20px;
   width: 250px;
   border-radius: 20px;
+  box-shadow: 0px 18px 28px rgb(15, 15, 15);
 }
 
 .todo-input-item input:focus{
@@ -63,6 +66,7 @@ border-radius: 50px;
   width: 60px;
   cursor: pointer;
   border-radius: 20px;
+  box-shadow: 0px 18px 28px rgb(15, 15, 15);
 }
 
 .primaryBtn:hover{
@@ -79,6 +83,7 @@ border-radius: 50px;
   padding: 10px;
   width: fit-content;
   cursor: pointer;
+  box-shadow: 0px 18px 28px rgb(15, 15, 15);
 
 }
 
@@ -89,7 +94,15 @@ border-radius: 50px;
 .todo-list{
   display: flex;
   flex-direction: column;
-
+  overflow-y: auto;
+  max-height: 50vh;
+  border-radius: 20px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.todo-list::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .btn-area{
@@ -105,9 +118,13 @@ border-radius: 50px;
   padding-bottom: 10px;
   padding-top: 10px;
   margin-bottom: 10px;
-  box-shadow: 0px 18px 28px rgb(43, 42, 42);
-  border-radius: 20px;
+  margin-top: 20px;
+  border-radius: 15px;
+  height: 120px;
+  /* width: 85%; */
+  box-shadow: 0px 15px 25px rgb(15, 15, 15);
 }
+
 
 .todo-list-item h3{
   font-size: 25px;
