todo wrapper size changed

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ body{
   background-color: #1f1e1e;
   color:white;
   overflow: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 h1{
@@ -12,10 +14,11 @@ h1{
 background: #353434;
 padding: 2%;
 width: fit-content;
+width:700px ;
 margin-left: auto;
 margin-right: auto;
 /* max-height: 80vh; */
-height: 80vh;
+height: 80%;
 box-shadow: 0px 8px 28px white;
 border-radius: 20px;
 
@@ -112,16 +115,15 @@ border-radius: 20px;
 .todo-list-item{
   background-color: #414040;
   display: flex;
+  /* flex-wrap: ; */
   justify-content: space-between;
   align-items: center;
   padding: 25px;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding-bottom: 30px;
+  padding-top: 40px;
   margin-bottom: 10px;
   margin-top: 20px;
   border-radius: 15px;
-  height: 120px;
-  /* width: 85%; */
   box-shadow: 0px 15px 25px rgb(15, 15, 15);
 }
 
@@ -145,6 +147,10 @@ border-radius: 20px;
 
 }
 
+.allIcons{
+  display: flex;
+  flex-wrap: nowrap;
+}
 .icon:hover{
   color: red;
 }
